--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<div class="row">
 		<div class="col-lg-4 col-md-6 col-sm-12">
 			<div class="item">
-				<h2 style="background-color: rgb(211,151,152); ;">Chicken</h2>
+				<h2 id="h2_1">Chicken</h2>
 				<p>
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -22,7 +22,7 @@
 		</div>
 		<div class="col-lg-4 col-md-6 col-sm-12">
 			<div class="item">
-			<h2 style="background-color: rgb(191,70,70); color: white">Beef</h2>
+			<h2 id="h2_2" ">Beef</h2>
 			<p>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -35,7 +35,7 @@
 		</div>
 		<div class="col-lg-4 col-md-12 col-sm-12">
 			<div class="item">
-			<h2 style="background-color: rgb(228,208,155);">Sushi</h2>
+			<h2 id="h2_3">Sushi</h2>
 			<p>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
